Update expected files for HTML scheduled reports w/ new quoted descriptions.

--- a/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
+++ b/tests/PHPUnit/System/expected/test_TwoVisitors_twoWebsites_differentDays_scheduled_report_in_html_tables_only__ScheduledReports.generateReport_month.original.html
@@ -11,7 +11,7 @@
 </h1>
 
 <p>
-    Mail Test report - Date range: 2010, January
+    &quot;Mail Test report&quot; - Date range: 2010, January
 </p>
 
 
