--- a/plugins/CoreHome/angularjs/reporting-page/reportingpage.directive.html
+++ b/plugins/CoreHome/angularjs/reporting-page/reportingpage.directive.html
@@ -4,7 +4,7 @@
         <img src="plugins/Morpheus/images/loading-blue.gif" alt=""/>{{ 'General_LoadingData'|translate }}
     </div>
 
-    <div ng-show="done && !loading && !pageModel.page">
+    <div ng-show="!hasPage">
         No such page exists
     </div>
 
